<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lstSpinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".Views.Fragments.fragment_config_geofence">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lblTextoDistancia"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblMetros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lblMetros"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:max="300" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideInset"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/cmdConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmdConfirmar" />

    <Button
        android:id="@+id/cmdLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmdLimpiar" />

    <Button
        android:id="@+id/cmdCalcularRuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmdCalcularRuta" />

</LinearLayout>
